fix: speakers list centered on mobile

--- a/src/styles/components/speakers.scss
+++ b/src/styles/components/speakers.scss
@@ -58,7 +58,7 @@ $max-speakers-width: 1450px;
     &__list {
         display: flex;
         flex-wrap: wrap;
-        justify-content: left;
+        justify-content: center;
 
         gap: $card-margin * 3.1;
 
@@ -70,6 +70,10 @@ $max-speakers-width: 1450px;
     @include media-breakpoint-up(lg) {
         &__spacer {
             display: block;
+        }
+
+        &__list {
+            justify-content: left;
         }
     }
 }
